<resources>
    <string name="app_name">RemissionApp</string>
    <string name="description_logo">Logo representativo de la empresa</string>
    <string name="generic_hint">&#8230;</string>
    <string name="numberWorker">Numero de trabajador</string>
    <string name="passworklabel">Contraseña</string>
    <string name="login">Iniciar sesion</string>
    <string name="namePayment">Nombre de quien paga</string>
    <string name="mount">Monto</string>
    <string name="acept">Aceptar</string>
    <string name="note">Escribe una nota para este entrega...</string>
</resources>