<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/carnival_logo"
        android:contentDescription="@string/description_logo"/>

    <LinearLayout
        android:id="@+id/llForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingHorizontal="50dp"

        android:gravity="center">


        <EditText
            android:id="@+id/etxt_numWorker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:hint="@string/numberWorker"
            android:inputType="text"
            android:maxLines="1"
            android:layout_marginBottom="30dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etxt_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:hint="@string/passworklabel"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginBottom="30dp"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:text="@string/login" />

    </LinearLayout>


</RelativeLayout>