<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="12dp"
        android:paddingHorizontal="20dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="30dp"
            android:text="Registro de pago"/>

        <EditText
            android:id="@+id/etxt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:hint="@string/namePayment"
            android:inputType="text"
            android:maxLines="1"
            android:layout_marginBottom="30dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etxt_mount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:hint="@string/mount"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:layout_marginBottom="30dp"
            android:autofillHints="" />

        <CheckBox
            android:id="@+id/chbxCalidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Calidad adecuada" />

        <CheckBox
            android:id="@+id/chbxPiezas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cantidad correcta" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fotografias"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Evidencia entrega"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/btnEntregaImg"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/camara"
                    app:tint="#CE3FB0"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/imgEntrega"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/noimg"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Identificacion oficial"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/btnIneImg"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/camara"
                    app:tint="#CE3FB0"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/imgIne"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/noimg"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Firma"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/btnReset"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/reset"
                app:tint="#CE3FB0"/>
        </LinearLayout>

        <com.github.gcacace.signaturepad.views.SignaturePad
            android:id="@+id/signaturePad"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:background="@drawable/bg_signature_pad"
            app:penColor="@color/black" />

        <Button
            android:id="@+id/btnAcept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:text="@string/acept" />


    </LinearLayout>
</ScrollView>